Removed overflow bug on editor panel.

--- a/src/components/AggregateViews/style.scss
+++ b/src/components/AggregateViews/style.scss
@@ -451,9 +451,10 @@ svg.closeBlockIconcolor_16 {
     fill: $highlightSeventeen;
   }
 }
-
-.Pane2 {
-  div.editorView {
-    height: 100%;
+.aggregateTabInnerWrapper {
+  .Pane2 {
+    div.editorView {
+      height: 100%;
+    }
   }
 }
